--- a/Tarefa2/exercicio1/index1.html
+++ b/Tarefa2/exercicio1/index1.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Sistema de Funcionários</title>
+  <title>Gestão de Funcionários</title>
   <style>
     table, th, td {
       border: 1px solid black;
@@ -15,11 +15,12 @@
   <h1>Cadastro de Funcionários</h1>
 
   <form id="form-funcionario">
+    <input type="hidden" id="indice-edicao" value="-1">
     <label>Nome: <input type="text" id="nome" required></label><br><br>
     <label>Idade: <input type="number" id="idade" required></label><br><br>
     <label>Cargo: <input type="text" id="cargo" required></label><br><br>
     <label>Salário: <input type="number" id="salario" required></label><br><br>
-    <button type="submit">Cadastrar</button>
+    <button type="submit">Salvar</button>
   </form>
 
   <h2>Lista de Funcionários</h2>
@@ -30,11 +31,12 @@
         <th>Idade</th>
         <th>Cargo</th>
         <th>Salário</th>
+        <th>Ações</th>
       </tr>
     </thead>
     <tbody></tbody>
   </table>
 
-  <script src="script1.js"></script>
+  <script src="script2.js"></script>
 </body>
 </html>
